--- a/1.2 Home.html
+++ b/1.2 Home.html
@@ -46,11 +46,12 @@
 						<h1>M E N U</h1>
 						<ul>
 							<li><strong>Home</strong></a></li>
+							<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 							<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 							<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
 							<li><a href="2.5.2 Covid-19.html">- Covid-19 (Python project)</a></li>
 							<li><a href="2.4.2 Bike-sharing.html">- Bike-sharing (SQL / Power BI project)</a></li>
-							<li><a href="2.3.2 Icecold.html">- Icecold (Qlik dashboard)</a></li>
+							<li><a href="2.3.2 Icecold.html">- Icecold (Qlik report)</a></li>
 							<li><a href="2.2.2 Price-calculus.html">- Price calculator (Excel project)</a></li>
 							<li><a href="2.1.2 Seafood.html">- Seafood (Report overview)</a></li>
 						</ul>
@@ -64,6 +65,17 @@
 								<p>Scroll down to see some projects I have worked with and a brief CV.</p>
 							</header>
 							<section class="tiles">
+								<article class="style13">
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<a href="2.8.2 Demographics.html">
+										<h2>Demografi</h2>
+										<div class="content">
+											<p>In this report I analyze population data from the UN.</p>
+										</div>
+									</a>
+								</article>
 								<article class="style12">
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
