--- a/2.2.2 Price-calculus.html
+++ b/2.2.2 Price-calculus.html
@@ -46,11 +46,12 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
 						<li><a href="2.5.2 Covid-19.html">- Covid-19 (Python project)</a></li>
 						<li><a href="2.4.2 Bike-sharing.html">- Bike-sharing (SQL / Power BI project)</a></li>
-						<li><a href="2.3.2 Icecold.html">- Icecold (Qlik dashboard)</a></li>
+						<li><a href="2.3.2 Icecold.html">- Icecold (Qlik report)</a></li>
 						<li><strong>- Price calculator (Excel project)</strong></a></li>
 						<li><a href="2.1.2 Seafood.html">- Seafood (report overview)</a></li>
 					</ul>
