--- a/2.3.2 Icecold.html
+++ b/2.3.2 Icecold.html
@@ -46,6 +46,7 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
 						<li><a href="2.5.2 Covid-19.html">- Covid-19 (Python project)</a></li>
