--- a/2.4.1 Bysykkel.html
+++ b/2.4.1 Bysykkel.html
@@ -46,11 +46,12 @@
 					<h1>M E N Y</h1>
 					<ul>
 						<li><a href="index.html">Hjem</a></li>
+						<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 						<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 						<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
 						<li><a href="2.5.1 Covid-19.html">- Covid-19 (Python prosjekt)</a></li>
 						<li><strong>- Bysykkel (SQL / Power BI prosjekt)</strong></a></li>
-						<li><a href="2.3.1 Iskald.html">- Iskald (Qlik dashboard)</a></li>
+						<li><a href="2.3.1 Iskald.html">- Iskald (Qlik rapport)</a></li>
 						<li><a href="2.2.1 Priskalkyle.html">- Priskalkyle (Excel prosjekt)</a></li>
 						<li><a href="2.1.1 Sjomat.html">- Sjømat (Rapportoversikt)</a></li>
 						<li><a href="3.1 CV.html">CV og sertifikater</a></li>
