--- a/2.6.1 Airbnb.html
+++ b/2.6.1 Airbnb.html
@@ -46,11 +46,12 @@
 							<h1>M E N Y</h1>
 							<ul>
 							<li><a href="index.html">Hjem</a></li>
+							<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 							<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 							<li><strong>- Airbnb (Power BI rapport)</strong></a></li>
 							<li><a href="2.5.1 Covid-19.html">- Covid-19 (Python prosjekt)</a></li>
 							<li><a href="2.4.1 Bysykkel.html">- Bysykkel (SQL / Power BI prosjekt)</a></li>
-							<li><a href="2.3.1 Iskald.html">- Iskald (Qlik dashboard)</a></li>
+							<li><a href="2.3.1 Iskald.html">- Iskald (Qlik rapport)</a></li>
 							<li><a href="2.2.1 Priskalkyle.html">- Priskalkyle (Excel prosjekt)</a></li>
 							<li><a href="2.1.1 Sjomat.html">- Sjømat (Rapportoversikt)</a></li>
 							</ul>
@@ -68,7 +69,7 @@
 							I tillegg inneholder den informasjon om Airbnb-opplevelsen, som hvor fornøyd kunden var med oppholdet og om utleieren er en 
 							såkalt "superhost". Rapporten finner du under her, trykk på bildet for å teste det i Power BI-appen.
 						<br><br>
-						<a href="https://app.powerbi.com/groups/me/reports/cdc65a6c-2ee1-4707-a29d-06dedc25f98d/ReportSection?experience=power-bi" class="logo">
+						<a href="https://app.powerbi.com/reportEmbed?reportId=20650b51-78cf-4b99-a88d-cd1d7747d145&autoAuth=true&ctid=6ee535f2-3064-4ac9-81d8-4ceb2ff790c6" class="logo">
 							<span class="image main"><img src="images/Airbnb1.PNG" alt="" /></span> </a>
 						<h4 style="margin-bottom: 0px;">Analyse</h4>
 						<p>Etter å ha behandlet dataen i Power Query, inneholdt det samlede datasettet over 50 000 registrerte 
