--- a/2.6.2 Airbnb.html
+++ b/2.6.2 Airbnb.html
@@ -46,11 +46,12 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 						<li><strong>- Airbnb (Power BI report)</strong></a></li>
 						<li><a href="2.5.2 Covid-19.html">- Covid-19 (Python project)</a></li>
 						<li><a href="2.4.2 Bike-sharing.html">- Bike-sharing (SQL / Power BI project)</a></li>
-						<li><a href="2.3.2 Icecold.html">- Icecold (Qlik dashboard)</a></li>
+						<li><a href="2.3.2 Icecold.html">- Icecold (Qlik report)</a></li>
 						<li><a href="2.2.2 Price-calculus.html">- Price calculator (Excel project)</a></li>
 						<li><a href="2.1.2 Seafood.html">- Seafood (report overview)</a></li>
 					</ul>
@@ -68,7 +69,7 @@
 							In addition, it contains information about the Airbnb experience, such as how satisfied the customer was with the stay and whether the landlord is a
 							so-called "superhost". You can find the report below here, click on the image to test it in the Power BI app.
 						<br><br>
-						<a href="https://app.powerbi.com/groups/me/reports/cdc65a6c-2ee1-4707-a29d-06dedc25f98d/ReportSection?experience=power-bi" class="logo">
+						<a href="https://app.powerbi.com/reportEmbed?reportId=20650b51-78cf-4b99-a88d-cd1d7747d145&autoAuth=true&ctid=6ee535f2-3064-4ac9-81d8-4ceb2ff790c6" class="logo">
 							<span class="image main"><img src="images/Airbnb1.PNG" alt="" /></span> </a>
 						<h4 style="margin-bottom: 0px;">Analysis</h4>
 						<p>After processing the data in Power Query, the overall dataset contained over 50,000 registered overnight stays in 10 different cities. 
