--- a/2.7.1 Apple.html
+++ b/2.7.1 Apple.html
@@ -46,11 +46,12 @@
 							<h1>M E N Y</h1>
 							<ul>
 							<li><a href="index.html">Hjem</a></li>
+							<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 							<li><strong>- Apple (Power BI analyse)</strong></a></li>
 							<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
 							<li><a href="2.5.1 Covid-19.html">- Covid-19 (Python prosjekt)</a></li>
 							<li><a href="2.4.1 Bysykkel.html">- Bysykkel (SQL / Power BI prosjekt)</a></li>
-							<li><a href="2.3.1 Iskald.html">- Iskald (Qlik dashboard)</a></li>
+							<li><a href="2.3.1 Iskald.html">- Iskald (Qlik rapport)</a></li>
 							<li><a href="2.2.1 Priskalkyle.html">- Priskalkyle (Excel prosjekt)</a></li>
 							<li><a href="2.1.1 Sjomat.html">- Sjømat (Rapportoversikt)</a></li>
 							</ul>
@@ -70,7 +71,7 @@
 							har blitt redusert, både i absolutte og relative tall, og hvilken gjennomsnittlig årlig reduksjonsrate 
 							(<i>average yearly reduction rate</i>) som er nødvendig for at Apple skal nå målet. Rapporten ligger under her, klikk på 
 							bildet under for å prøve den i Power BI-appen. Oversatt oppgavebeskrivelse og analyse ligger også under her.</p>
-						<a href="https://app.powerbi.com/groups/me/reports/cac8c062-77b4-409b-a2b4-73ebcc16a0e9/ReportSection5beb6b13196d3158054c?experience=power-bi" class="logo">
+						<a href="https://app.powerbi.com/reportEmbed?reportId=cac8c062-77b4-409b-a2b4-73ebcc16a0e9&autoAuth=true&ctid=6ee535f2-3064-4ac9-81d8-4ceb2ff790c6" class="logo">
 							<span class="image main"><img src="images/Apple1.PNG" alt="" /></span> </a>
 						<h4 style="margin-bottom: 0px;">Oppgavebeskrivelse</h4>
 						<p>	I 2020, etter å ha kunngjort at utslipp knyttet til Apple's virksomhetsstyring offisielt hadde blitt redusert til null, 
