--- a/2.7.2 Apple.html
+++ b/2.7.2 Apple.html
@@ -46,11 +46,12 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><strong>- Apple (Power BI analysis)</strong></a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
 						<li><a href="2.5.2 Covid-19.html">- Covid-19 (Python project)</a></li>
 						<li><a href="2.4.2 Bike-sharing.html">- Bike-sharing (SQL / Power BI project)</a></li>
-						<li><a href="2.3.2 Icecold.html">- Icecold (Qlik dashboard)</a></li>
+						<li><a href="2.3.2 Icecold.html">- Icecold (Qlik report)</a></li>
 						<li><a href="2.2.2 Price-calculus.html">- Price calculator (Excel project)</a></li>
 						<li><a href="2.1.2 Seafood.html">- Seafood (report overview)</a></li>
 					</ul>
@@ -70,7 +71,7 @@
 							and relative terms, and which <i>average yearly reduction rate</i> is needed for Apple to achieve its objective.
 							The report can be found below here, including task description and analysis. Click on the image to try out my report 
 							in the Power BI app.</p>
-						<a href="https://app.powerbi.com/groups/me/reports/cac8c062-77b4-409b-a2b4-73ebcc16a0e9/ReportSection5beb6b13196d3158054c?experience=power-bi" class="logo">
+						<a href="https://app.powerbi.com/reportEmbed?reportId=cac8c062-77b4-409b-a2b4-73ebcc16a0e9&autoAuth=true&ctid=6ee535f2-3064-4ac9-81d8-4ceb2ff790c6" class="logo">
 							<span class="image main"><img src="images/Apple1.PNG" alt="" /></span> </a>
 						<h4 style="margin-bottom: 0px;">Other scenarios (with use of the slicers)</h4>
 							<img src="images/Apple2.png" style="float: left; width: 49.5%; margin-right: 0.3%; margin-bottom: 1em;">
