--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
 						<h1>M E N Y</h1>
 						<ul>
 							<li><strong>Hjem</strong></a></li>
+							<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 							<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 							<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
 							<li><a href="2.5.1 Covid-19.html">- Covid-19 (Python prosjekt)</a></li>
 							<li><a href="2.4.1 Bysykkel.html">- Bysykkel (SQL / Power BI prosjekt)</a></li>
-							<li><a href="2.3.1 Iskald.html">- Iskald (Qlik dashboard)</a></li>
+							<li><a href="2.3.1 Iskald.html">- Iskald (Qlik rapport)</a></li>
 							<li><a href="2.2.1 Priskalkyle.html">- Priskalkyle (Excel prosjekt)</a></li>
 							<li><a href="2.1.1 Sjomat.html">- Sjømat (Rapportoversikt)</a></li>
 						</ul>
@@ -64,6 +65,17 @@
 								<p>Scroll ned for å se noen av prosjektene jeg har jobbet med og en kortfattet CV.</p>
 							</header>
 							<section class="tiles">
+								<article class="style13">
+									<span class="image">
+										<img src="images/pic04.jpg" alt="" />
+									</span>
+									<a href="2.8.1 Demografi.html">
+										<h2>Demografi</h2>
+										<div class="content">
+											<p>I denne rapporten analyserer jeg befolkningsdata fra FN.</p>
+										</div>
+									</a>
+								</article>
 								<article class="style12">
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
