--- a/1.2 Home.html
+++ b/1.2 Home.html
@@ -46,6 +46,7 @@
 						<h1>M E N U</h1>
 						<ul>
 							<li><strong>Home</strong></a></li>
+							<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
 							<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 							<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 							<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
@@ -65,6 +66,17 @@
 								<p>Scroll down to see some projects I have worked with and a brief CV.</p>
 							</header>
 							<section class="tiles">
+								<article class="style14">
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<a href="2.9.1 Lunsj.html">
+										<h2>Lunsj</h2>
+										<div class="content">
+											<p>Here I use Power Automate, Power Apps and Power BI to build a report using survey data from Microsoft Forms.</p>
+										</div>
+									</a>
+								</article>
 								<article class="style13">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
