--- a/2.3.1 Iskald.html
+++ b/2.3.1 Iskald.html
@@ -46,6 +46,7 @@
 					<h1>M E N Y</h1>
 					<ul>
 						<li><a href="index.html">Hjem</a></li>
+						<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 						<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 						<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
@@ -60,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Prosjekt: Iskald</h1>
+						<h1>Iskald</h1>
 						<h4 style="margin-bottom: 0px;">Introduksjon</h4>
 						<p>For å teste ut Qlik Sense, én av de ledende business intelligence-lønsningene på det norske markedet, laget jeg et dashboard til en virtuel iskremprodusent. 
 							Produsenten "Iskald" leverer iskrem og andre fryste produkter til bedrifter og husholdninger i Sør-Øst Norge. Dataen er også fiktiv og består av salgsdata samt detaljert data på kunder, ansatte, produkter og markeder.</p>
