--- a/2.3.2 Icecold.html
+++ b/2.3.2 Icecold.html
@@ -46,6 +46,7 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
@@ -60,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Project: Icecold</h1>
+						<h1>Icecold</h1>
 						<h4 style="margin-bottom: 0px;">Introduction</h4>
 						<p>In order to test out Qlik Sense, one of the leading business intelligence solutions on the Norwegian market, I created a dashboard for a virtual ice cream manufacturer.
 							The manufacturer, "Icecold", supplies ice cream and other frozen products to companies and households in South-Eastern Norway.
