--- a/2.4.1 Bysykkel.html
+++ b/2.4.1 Bysykkel.html
@@ -46,6 +46,7 @@
 					<h1>M E N Y</h1>
 					<ul>
 						<li><a href="index.html">Hjem</a></li>
+						<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 						<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 						<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
@@ -61,7 +62,7 @@
 <!-- Main -->
 <div id="main">
 	<div class="inner">
-		<h1>Prosjekt: Bysykkel</h1>
+		<h1>Bysykkel</h1>
 		<h2 style="margin-bottom: 0px;">Introduksjon</h2>
 		<p>Som en del av Google sin Data Analytics Professional Certificate gjorde jeg en analyse av Cyclistic, et fiktivt selskap som leier
 			ut bysykler i Chicago. Brukerne av Cyclistic tilbys både enkeltbilletter, dagspass og årsmedlemskap. Ledelsen i Cyclistic ønsker å få 
