--- a/2.4.2 Bike-sharing.html
+++ b/2.4.2 Bike-sharing.html
@@ -46,6 +46,7 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
@@ -61,7 +62,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Project: Bike-sharing</h1>
+							<h1>Bike-sharing</h1>
 							<h2 style="margin-bottom: 0px;">Introduction</h2>
 							<p>As part of Google's Data Analytics Professional Certificate, I did an analysis of Cyclistic, a fictional company that rents 
 								out city bikes in Chicago. Cyclistic users are offered both single tickets, day passes and annual memberships. The management 
