--- a/2.6.2 Airbnb.html
+++ b/2.6.2 Airbnb.html
@@ -46,6 +46,7 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 						<li><strong>- Airbnb (Power BI report)</strong></a></li>
@@ -60,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Project: Airbnb</h1>
+						<h1>Airbnb</h1>
 						<h4 style="margin-bottom: 0px;">Introduction</h4>
 						<p>This one-pager is a personal project I made in order to learn some new functions in Power BI. The datasets I downloaded 
 							from Kaggle and contain extensive data on Airbnb prices in some of the most popular cities in Europe.
