--- a/2.7.1 Apple.html
+++ b/2.7.1 Apple.html
@@ -46,6 +46,7 @@
 							<h1>M E N Y</h1>
 							<ul>
 							<li><a href="index.html">Hjem</a></li>
+							<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
 							<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 							<li><strong>- Apple (Power BI analyse)</strong></a></li>
 							<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
@@ -60,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Prosjekt: Apple</h1>
+						<h1>Apple</h1>
 						<h4 style="margin-bottom: 0px;">Introduksjon</h4>
 						<p>	Som en del av en datakonkurranse i regi av Maven Analytics, analyserte jeg data
 							fra Apple's årlige miljørapport. I årets utgave av rapporten annonserte Apple store fremskritt mot målet deres
