--- a/2.7.2 Apple.html
+++ b/2.7.2 Apple.html
@@ -46,6 +46,7 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><strong>- Apple (Power BI analysis)</strong></a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
@@ -60,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Project: Apple</h1>
+						<h1>Apple</h1>
 						<h4 style="margin-bottom: 0px;">Introduction</h4>
 						<p>	In the Maven Environmental Challenge, a data challenge hosted by Maven Analytics, the objective was to analyze data 
 							from Apple's yearly updated Environmental Progress report. In this year's report, Apple announced major progress towards their goal 
