--- a/2.8.1 Demografi.html
+++ b/2.8.1 Demografi.html
@@ -46,6 +46,7 @@
 							<h1>M E N Y</h1>
 							<ul>
 							<li><a href="index.html">Hjem</a></li>
+							<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
 							<li><strong>- Demografi (Power BI analyse)</strong></a></li>
 							<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 							<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
@@ -60,9 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Prosjekt: Verdens demografi</h1>
-						
-						
+						<h1>Verdens demografi</h1>						
 						<a href="https://app.powerbi.com/reportEmbed?reportId=a2fbd766-636c-4e58-864d-6d256bafe0dc&autoAuth=true&ctid=6ee535f2-3064-4ac9-81d8-4ceb2ff790c6" class="logo">
 								<span class="image main"><img src="images/DemografiNo1.PNG" style="float: left; width: 60%; margin-right: 3%; margin-bottom: 1em;" alt="" /></span> </a>
 						<h4 style="margin-bottom: 0px;">Introduksjon</h4>
