--- a/2.8.2 Demographics.html
+++ b/2.8.2 Demographics.html
@@ -46,6 +46,7 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
 						<li><strong>- Demographics (Power BI analysis)</strong></a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analyse)</a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
@@ -60,9 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Project: Demographics of the World</h1>
-						
-						
+						<h1>Demographics of the World</h1>					
 						<a href="https://app.powerbi.com/reportEmbed?reportId=af468210-fa8a-4a97-b619-e0b58ea73b85&autoAuth=true&ctid=6ee535f2-3064-4ac9-81d8-4ceb2ff790c6" class="logo">
 								<span class="image main"><img src="images/DemografiEn1.PNG" style="float: left; width: 60%; margin-right: 3%; margin-bottom: 1em;" alt="" /></span> </a>
 						<h4 style="margin-bottom: 0px;">Introduction</h4>
