--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 						<h1>M E N Y</h1>
 						<ul>
 							<li><strong>Hjem</strong></a></li>
+							<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
 							<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 							<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 							<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
@@ -65,6 +66,17 @@
 								<p>Scroll ned for å se noen av prosjektene jeg har jobbet med og en kortfattet CV.</p>
 							</header>
 							<section class="tiles">
+								<article class="style14">
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<a href="2.9.1 Lunsj.html">
+										<h2>Lunsj</h2>
+										<div class="content">
+											<p>Her bruker jeg Power Automate, Power Apps og Power BI til å fremstille data fra en Microsoft Forms spørreundersøkelse.</p>
+										</div>
+									</a>
+								</article>
 								<article class="style13">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
