--- a/2.1.1 Sjomat.html
+++ b/2.1.1 Sjomat.html
@@ -46,6 +46,7 @@
 					<h1>M E N Y</h1>
 					<ul>
 						<li><a href="index.html">Hjem</a></li>
+						<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 						<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 						<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
@@ -60,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Prosjekt: Sjømat</h1>
+						<h1>Sjømat</h1>
 						<h4 style="margin-bottom: 0px;">Fra idé til rapport</h4>
 						<p>I min første analytiske stilling jobbet jeg for Norges sjømatråd, en interesseorganisajon for norsk sjømat. I avdelingen <i>markedsinnsikt</i>  
 							analyserte jeg eksport- og konsumdata av norsk sjømat ved hjelp av "verdens største sjømatdatabase". Våre analyser ble hovedsakelig fremstilt 
