--- a/2.1.2 Seafood.html
+++ b/2.1.2 Seafood.html
@@ -46,6 +46,7 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
@@ -61,7 +62,7 @@
 					<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Project: Seafood</h1>
+							<h1>Seafood</h1>
 							<h4 style="margin-bottom: 0px;">From idea to report</h4>
 							<p>The Norwegian Seafood Council is an advocacy group for Norwegian seafood. Here, I worked in the department <i>market insight</i>
 								which has access to "the world's largest seafood database". We mainly produced various reports on seafood consumption worldwide, like 
