--- a/2.2.1 Priskalkyle.html
+++ b/2.2.1 Priskalkyle.html
@@ -46,6 +46,7 @@
 					<h1>M E N Y</h1>
 					<ul>
 						<li><a href="index.html">Hjem</a></li>
+						<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 						<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 						<li><a href="2.6.1 Airbnb.html">- Airbnb (Power BI rapport)</a></li>
@@ -60,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Prosjekt: Priskalkyle</h1>
+						<h1>Priskalkyle</h1>
 						<h4 style="margin-bottom: 0px;">Introduksjon</h4>
 						<p>For tidligere arbeidsgiver laget jeg en priskalkyle som kunne erstatte manuell prising av såkalte vintertjenester som brøyting og strøing (for privatmarkedet). 
 							I dette eksempelet har jeg endret noen variabler og laget en kalkyle for "flyttetjenester", altså tjenestene et flyttebyrå kan levere. 
