--- a/2.2.2 Price-calculus.html
+++ b/2.2.2 Price-calculus.html
@@ -46,6 +46,7 @@
 					<h1>M E N U</h1>
 					<ul>
 						<li><a href="1.2 Home.html">Home</a></li>
+						<li><a href="2.9.2 Lunch.html">- Lunch (Use of Power Automate, Apps og BI)</a></li>
 						<li><a href="2.8.2 Demographics.html">- Demographics (Power BI analysis)</a></li>
 						<li><a href="2.7.2 Apple.html">- Apple (Power BI analysis)</a></li>
 						<li><a href="2.6.2 Airbnb.html">- Airbnb (Power BI report)</a></li>
@@ -60,7 +61,7 @@
 							<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Project: Price calculator</h1>
+						<h1>Price calculator</h1>
 						<h4 style="margin-bottom: 0px;">Introduction</h4>
 						<p>For a former employer, I made a price calculator that could replace manual pricing of so-called winter services like 
 							snow plowing and gritter spreading (for the private market). In this example, I have changed some variables and created 
