--- a/2.6.1 Airbnb.html
+++ b/2.6.1 Airbnb.html
@@ -46,6 +46,7 @@
 							<h1>M E N Y</h1>
 							<ul>
 							<li><a href="index.html">Hjem</a></li>
+							<li><a href="2.9.1 Lunsj.html">- Lunsj (Bruk av Power Automate, Apps og BI)</a></li>
 							<li><a href="2.8.1 Demografi.html">- Demografi (Power BI analyse)</a></li>
 							<li><a href="2.7.1 Apple.html">- Apple (Power BI analyse)</a></li>
 							<li><strong>- Airbnb (Power BI rapport)</strong></a></li>
@@ -60,7 +61,7 @@
 				<!-- Main -->
 				<div id="main">
 					<div class="inner">
-						<h1>Prosjekt: Airbnb</h1>
+						<h1>Airbnb</h1>
 						<h4 style="margin-bottom: 0px;">Introduksjon</h4>
 						<p>Denne one-pageren laget jeg som et eget prosjekt for å lære noen nye funksjoner i Power BI. Datasettene lastet jeg ned fra  
 							Kaggle og inneholder omfattende data på Airbnb-priser i noen av de mest populære byene i Europa. 
