--- a/2.9.1 Lunsj.html
+++ b/2.9.1 Lunsj.html
@@ -68,8 +68,8 @@
 							Microsoft Forms brukte jeg til å samle inn data, Power Automate til å lagre denne dataen i Dataverse, Power BI til å fremstille dataen 
 							visuelt og Power Apps til å la brukerne av dashboardet samhandle med dataen.
 						</p>
-						<img src="images/Lunsj1.png" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
-						<img src="images/Lunsj4.png" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
+						<img src="images/Lunsj1.PNG" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
+						<img src="images/Lunsj4.PNG" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
 						<h4 style="margin-bottom: 0px;">Framgangsmåte</h4>
 						<p>Spørreundersøkelsen jeg satt opp i Forms tok utgangspunkt i et fiktivt lunsjtilbud i en kantine. Brukerne, ansatte i én av fire avdelinger 
 							på et kontor kunne på denne måten komme med en tilbakemelding på deres vurdering om lunsjtilbudet. De fikk mulighet å vurdere ulike 
@@ -82,8 +82,8 @@
 							det kan forbedre seg. I tillegg får brukeren mulighet til å kommentere på de ulike tilbakemeldingene de har fått for å legge igjen en 
 							intern forklaring på en tilbakemelding eller en kommentar om hvordan noe har blitt tatt tak i.
 					 </p>
-						<img src="images/Lunsj2.png" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
-						<img src="images/Lunsj3.png" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
+						<img src="images/Lunsj2.PNG" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
+						<img src="images/Lunsj3.PNG" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
 						</a>
 						<p style="clear: both;"></p>
 					</div>
