--- a/2.9.2 Lunch.html
+++ b/2.9.2 Lunch.html
@@ -66,8 +66,8 @@
 						<p>In this project I used Microsoft Forms, Power Automate, Dataverse, Power Apps and Power BI to set up an interactive dashboard
 							to visualize simulated data. I used Microsoft Forms to collect data, Power Automate to store this data in Dataverse, Power BI 
 							to visualize the data and Power Apps to allow users of the dashboard to interact with the data.</p>
-						<img src="images/Lunsj1.png" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
-						<img src="images/Lunsj4.png" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
+						<img src="images/Lunsj1.PNG" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
+						<img src="images/Lunsj4.PNG" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
 						<h4 style="margin-bottom: 0px;">Approach</h4>
 						<p>The survey I set up in Forms was based on a simulated situtation where the users of an office cafetaria could provide feedback on the lunch 
 							offered in the cafeteria. They had the opportunity to evaluate different aspects of the lunch offered, like price and taste/quality, as well 
@@ -79,8 +79,8 @@
 							offer and where they think it can improve. In addition, the dashboard user is given the opportunity to comment on the feedback 
 							they have received and leave an internal explanation for a feedback or a comment on how something has been addressed.
 					 </p>
-						<img src="images/Lunsj2.png" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
-						<img src="images/Lunsj3.png" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
+						<img src="images/Lunsj2.PNG" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
+						<img src="images/Lunsj3.PNG" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
 						</a>
 						<p style="clear: both;"></p>
 					</div>
