--- a/2.7.1 Apple.html
+++ b/2.7.1 Apple.html
@@ -102,8 +102,8 @@
 							Dessuten kan det vise seg å være utfordrende å fjerne 9,6 millioner tonn CO2e gjennom CO2-kompensasjon, ettersom det mellom 2015 og 
 							2022 kun ble fjernet 1,1 millioner tonn CO2e gjennom CO2-kompensasjon. </p>
 						<h4 style="margin-bottom: 0px;">Andre scenarioer (ved bruk av slicerne)</h4>
-							<img src="images/Apple2.png" style="float: left; width: 49.5%; margin-right: 0.3%; margin-bottom: 1em;">
-							<img src="images/Apple3.png" style="float: left; width: 49.5%; margin-bottom: 8em;"> 
+							<img src="images/Apple2.PNG" style="float: left; width: 49.5%; margin-right: 0.3%; margin-bottom: 1em;">
+							<img src="images/Apple3.PNG" style="float: left; width: 49.5%; margin-bottom: 8em;"> 
 					</div>
 				</div>
 
