--- a/2.7.2 Apple.html
+++ b/2.7.2 Apple.html
@@ -75,8 +75,8 @@
 						<a href="https://app.powerbi.com/reportEmbed?reportId=cac8c062-77b4-409b-a2b4-73ebcc16a0e9&autoAuth=true&ctid=6ee535f2-3064-4ac9-81d8-4ceb2ff790c6" class="logo">
 							<span class="image main"><img src="images/Apple1.PNG" alt="" /></span> </a>
 						<h4 style="margin-bottom: 0px;">Other scenarios (with use of the slicers)</h4>
-							<img src="images/Apple2.png" style="float: left; width: 49.5%; margin-right: 0.3%; margin-bottom: 1em;">
-							<img src="images/Apple3.png" style="float: left; width: 49.5%; margin-bottom: 8em;"> 
+							<img src="images/Apple2.PNG" style="float: left; width: 49.5%; margin-right: 0.3%; margin-bottom: 1em;">
+							<img src="images/Apple3.PNG" style="float: left; width: 49.5%; margin-bottom: 8em;"> 
 					</div>
 				</div>
 
