--- a/2.9.1 Lunsj.html
+++ b/2.9.1 Lunsj.html
@@ -64,7 +64,7 @@
 						<h1>Lunsj</h1>
 						<h4 style="margin-bottom: 0px;">Introduksjon</h4>
 						<p>I dette prosjektet brukte jeg Microsoft Forms, Power Automate, Dataverse, Power Apps og Power BI til å sette opp et interaktivt dashbord 
-							for å fremstille fiktive data. 
+							for å fremstille data fra en fiktiv spørreundersøkelse. 
 							Microsoft Forms brukte jeg til å samle inn data, Power Automate til å lagre denne dataen i Dataverse, Power BI til å fremstille dataen 
 							visuelt og Power Apps til å la brukerne av dashboardet samhandle med dataen.
 						</p>
@@ -75,12 +75,11 @@
 							på et kontor kunne på denne måten komme med en tilbakemelding på deres vurdering om lunsjtilbudet. De fikk mulighet å vurdere ulike 
 							aspekter ved lunsjtilbudet, som pris og smak/kvalitet, samt gi en karakter og eventuelt en kommentar. I Dataverse satt jeg opp en tabell 
 							etter de ulike spørsmålene og svaralternativene fra spørreundersøkelsen, og via en enkel løsning i Power Automate fikk jeg automatisk 
-							lagret dataen der. Deretter laget jeg et dashbord som fremstiller svarene fra spørreundersøkelsen. I tillegg laget jeg en løsning 
+							sendt dataen dit. Deretter laget jeg et dashbord som fremstiller svarene fra spørreundersøkelsen. I tillegg laget jeg en løsning 
 							i Power Apps som gjør det mulig for brukerne av dashbordet til å kommentere (eller redigere) dataen, og som lagrer denne i Dataverse.
 							Ved bruk av Dataverse skjer oppdatering av dataen i dashbordet automatisk og i nåtid. Utklippene under viser hvordan en bruker, for 
-							eksempel personen som er ansvarlig for kantinen, enkelt kan se hva ansatte spiser mest, hvordan de vurderer lunsjtilbudet og hvor de synes 
-							det kan forbedre seg. I tillegg får brukeren mulighet til å kommentere på de ulike tilbakemeldingene de har fått for å legge igjen en 
-							intern forklaring på en tilbakemelding eller en kommentar om hvordan noe har blitt tatt tak i.
+							eksempel den som er ansvarlig for kantinen, enkelt kan se hva ansatte spiser mest, hvordan de vurderer lunsjtilbudet og hvor de synes 
+							det kan forbedre seg. I tillegg får brukeren mulighet til å kommentere på de ulike tilbakemeldingene de har fått.
 					 </p>
 						<img src="images/Lunsj2.PNG" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
 						<img src="images/Lunsj3.PNG" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
