--- a/2.9.2 Lunch.html
+++ b/2.9.2 Lunch.html
@@ -64,20 +64,19 @@
 						<h1>Lunch</h1>
 						<h4 style="margin-bottom: 0px;">Introduction</h4>
 						<p>In this project I used Microsoft Forms, Power Automate, Dataverse, Power Apps and Power BI to set up an interactive dashboard
-							to visualize simulated data. I used Microsoft Forms to collect data, Power Automate to store this data in Dataverse, Power BI 
+							to visualize survey data. I used Microsoft Forms to collect data, Power Automate to store this data in Dataverse, Power BI 
 							to visualize the data and Power Apps to allow users of the dashboard to interact with the data.</p>
 						<img src="images/Lunsj1.PNG" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
 						<img src="images/Lunsj4.PNG" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
 						<h4 style="margin-bottom: 0px;">Approach</h4>
-						<p>The survey I set up in Forms was based on a simulated situtation where the users of an office cafetaria could provide feedback on the lunch 
+						<p>The survey I set up in Forms was based on a simulated situation where the users of an office cafetaria could provide feedback on the lunch 
 							offered in the cafeteria. They had the opportunity to evaluate different aspects of the lunch offered, like price and taste/quality, as well 
-							as providing a grade and possibly a comment. In Dataverse I set up a table after the various questions and answer options from the survey, 
+							as giving a grade and possibly a comment. In Dataverse I set up a table after the various questions and answer options from the survey, 
 							and through a simple solution in Power Automate I automatically got stored the data there. I then created a dashboard that visualizes the survey 
 							responses. In addition, I built a solution in Power Apps which enables the users of the dashboard to comment (or edit) the data, and which stores 
 							this data back in Dataverse. When using Dataverse, the data in the dashboard is updated automatically and in real-time. The screenshots below 
 							indicate how someone, the person in charge of the cafetaria for instance, can easily see what employees eat the most, how they rate the lunch 
-							offer and where they think it can improve. In addition, the dashboard user is given the opportunity to comment on the feedback 
-							they have received and leave an internal explanation for a feedback or a comment on how something has been addressed.
+							offer and where they think it can improve. In addition, the dashboard user is given the opportunity to comment on the received feedback.
 					 </p>
 						<img src="images/Lunsj2.PNG" style="float: left; width: 49%; margin-right: 1%; margin-bottom: 2em;"> 
 						<img src="images/Lunsj3.PNG" style="float: right; width: 49%; margin-left: 1%; margin-bottom: 2em;">
